--- a/package.json
+++ b/package.json
@@ -21,23 +21,26 @@
   "homepage": "https://github.com/valentinesamuel/ts-todo-node#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.2.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.5",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "eslint": "^8.36.0",
+    "eslint-config-prettier": "8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-import-resolver-typescript": "3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.21",
+    "prettier": "2.8.6",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.2",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-import-resolver-typescript": "3.5.3",
-    "eslint-plugin-prettier": "4.2.1",
-    "prettier": "2.8.6"
+    "typescript": "^5.0.2"
   }
 }
